--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-link"></i></div>
               <h4><a href="Pemenang Championship Periode Jan-Jun2021NEW.jpg">Championship</a></h4>
               <p><a href="Kualifikasi Championship 2021 min.pdf">Kualifikasi Championship 2021</a> || <a href="Pemenang Championship Periode Jan-Jun2021NEW.jpg">Daftar Pemenang Championship</a></p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
