nambah jadwal zoom link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="jadwal.html">Jadwal Zoom</a></li>
           <!-- <li><a href="https://forms.gle/jdZZaRQuRpJSCbbW9">B-RICH</a></li> -->
           <!--<li><a href="https://billionairesindonesia.com/EnterpriserCamp/">Enterpriser Camp</a></li>-->
           <!--<li><a href="https://billionairesindonesia.com/LeaderCamp/">Leader Camp</a></li>-->
