update link bmw jabar

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="https://billionairesindonesia.com/BMW">BMW Juni 2022</a></li>
+          <li><a href="https://billionairesindonesia.com/BMW">BMW JATIM 2022</a></li>
+          <li><a href="https://billionairesindonesia.com/BMWJBR">BMW JABAR 2022</a></li>
           <li><a href="https://billionaires-indo.com/BBSJadwal/">Jadwal Zoom</a></li>
           <!-- <li><a href="https://forms.gle/jdZZaRQuRpJSCbbW9">B-RICH</a></li> -->
           <!--<li><a href="https://billionairesindonesia.com/EnterpriserCamp/">Enterpriser Camp</a></li>-->
@@ -78,7 +79,7 @@
         <div class="carousel-item active" style="background-image: url(assets/img/slide/bmw-jatim-2022-web1.jpg)">
          <div class="carousel-container">
            <div class="container">
-             <h2 class="animate__animated animate__fadeInDown">BMW Juni 2022</h2>
+             <h2 class="animate__animated animate__fadeInDown">BMW JATIM 2022</h2>
              <p class="animate__animated animate__fadeInUp">
                 <!--<center> <a href="https://billionairesindonesia.com/EnterpriserCamp/"><img src="assets/img/tombol pendaftaran shampionship 2021 fix.png"></a></center>-->
              </p>
@@ -86,7 +87,16 @@
            </div>
          </div>
         </div>
-        
+        <div class="carousel-item" style="background-image: url(assets/img/slide/bmw-jabar-2022-web1.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">BMW JABAR 2022</h2>
+              <p class="animate__animated animate__fadeInUp">
+              </p>
+               <a href="https://billionairesindonesia.com/BMWJBR" class="btn-get-started animate__animated animate__fadeInUp scrollto">Daftar</a>
+            </div>
+          </div>
+         </div>
         <!-- <div class="carousel-item active" style="background-image: url(assets/img/slide/brich-web.jpg)">
           <div class="carousel-container">
             <div class="container">
